[tool.poetry]
name = "stiff-explore"
version = "0.1.0"
description = ""
authors = ["Frankie Robertson <frankie@robertson.name>"]

[tool.poetry.dependencies]
python = "^3.7"
scikit-plot = "^0.3.7"
jupyter = "^1.0"
ipykernel = "^5.1"
cihai = "^0.9.0"
pandas = "*"
streamz = "*"
mafan = {git = "https://github.com/frankier/mafan.git"}
stiff = {git = "https://github.com/frankier/STIFF.git"}
wsdeval = {git = "https://github.com/frankier/finn-wsd-eval.git"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
